# Max-Newsletter

./: .gitignore  .pre-commit-config.yaml  Dockerfile-dev  README.md  docker-compose-dev.yml  docker-compose.yml  flaskenv.sample  pyproject.toml  setup.cfg
flask/: Dockerfile  celery_worker.py  docker-entrypoint.sh  main.py  requirements.txt  test.sh
flask/app/: __init__.py
flask/app/config/: config.py
flask/app/model/: article.py  email.py  schema.drawio
flask/app/model/mixin/: basic.py
flask/app/static/css/: layout.css
flask/app/templates/: index.html  rss.xml
flask/app/templates/email/: mail_template.html  submit_mail_en.html  submit_mail_zh.html  submit_result_fail.html  submit_result_success.html
flask/app/templates/errors/: 401.html  404.html  500.html
flask/app/templates/shared/category/: footer.html  header.html  layout.html
flask/app/translations/en/LC_MESSAGES/: messages.mo  messages.po
flask/app/translations/zh/LC_MESSAGES/: messages.mo  messages.po
flask/app/views/: abort_msg.py  email.py  index.py  rss.py
flask/app/views/celery_tasks/: clean_table.py  send_email.py  tasks.py
flask/app/views/celery_tasks/crawler/: check.py  database.py  main.py  spider.py
flask/migrations/versions/: 0001_generated.py
flask/tests/: test.coveragerc  test_email.py  test_index.py  test_rss.py
nginx/: Dockerfile-dev  nginx.conf  nginx_dev.conf
