[tool.poetry]
name = "max_newsletter"
version = "0.1.0"
description = ""
authors = ["hsuanchi <a0025071@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-dotenv = "^0.15.0"
redis = "^3.5.3"
uWSGI = "^2.0.19"
celery = "4.4.7"
flower = "^0.9.5"
Flask = "^1.1.2"
Flask-Babel = "^2.0.0"
Flask-Caching = "^1.9.0"
Flask-JWT-Extended = "^3.25.0"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^2.5.3"
Flask-SQLAlchemy = "^2.4.4"
PyMySQL = "^0.10.1"
Flask-Testing = "^0.8.0"
Flask-WTF = "^0.14.3"
marshmallow = "^3.9.1"
pandas = "^1.1.4"
beautifulsoup4 = "^4.9.3"
feedparser = "^6.0.2"
cloudscraper = "^1.2.48"
google-cloud-translate = "^3.0.1"

[tool.poetry.dev-dependencies]
coverage = "^5.3"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
